# Dachs

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Guardfile  LEADME.md  README.md  appveyor.yml
lib/: CMakeLists.txt
lib/dachs/std/: argv.dcs  array.dcs  char.dcs  gc.dcs  numeric.dcs  pointer.dcs  random.dcs  range.dcs  string.dcs  unittest.dcs
lib/dachs/std/random/: mt19937.dcs  xor128.dcs
lib/dachs/std/unittest/: assertion.dcs
misc/: syntax_memo.md
next/: LICENSE  README.md
next/compiler/: Guardfile  Makefile  README.md
next/compiler/ast/: example_test.go  module.go  node.go  printer.go  printer_test.go  visitor.go  visitor_test.go
next/compiler/driver/: example_test.go  mediator.go
next/compiler/driver/dachs/: main.go
next/compiler/prelude/: error.go  error_test.go  log.go  log_test.go  ordinal.go  ordinal_test.go  position.go  position_test.go  source.go  source_test.go
next/compiler/syntax/: block_expr.go  block_expr_test.go  example_test.go  grammar.go.y  grammar_test.go  import.go  import_test.go  lexer.go  lexer_test.go  parser.go  parser_test.go  token.go  token_test.go
next/compiler/syntax/testdata/: array.ast  array.dcs  array.tokens  comment.ast  comment.dcs  comment.tokens  data_type.dcs  data_type.tokens  dict.ast  dict.dcs  dict.tokens  enum_type.ast  enum_type.dcs  enum_type.tokens  float.ast  float.dcs  float.tokens  func.ast  func.dcs  func.tokens  func2.ast  func2.dcs  hello_world.ast  hello_world.dcs  if.ast  if.dcs  if.tokens  import.ast  import.dcs  import.tokens  int.ast  int.dcs  int.tokens  lambda.ast  lambda.dcs  lambda.tokens  loop.ast  loop.dcs  loop.tokens  match.ast  (+27 more)
next/compiler/syntax/testdata/import/error_myself/: main.dcs  myself.dcs
next/compiler/syntax/testdata/import/error_parse/: foo.dcs  main.dcs
next/compiler/syntax/testdata/import/error_unknown/: main.dcs
next/compiler/syntax/testdata/import/error_unknown_external/: main.dcs
next/compiler/syntax/testdata/import/externallib/mylib/: aaa.dcs
next/compiler/syntax/testdata/import/local/: main.dcs
next/compiler/syntax/testdata/import/nested/: foo.dcs  main.dcs
next/compiler/syntax/testdata/import/relative/: foo.dcs  main.dcs
next/compiler/syntax/testdata/import/uselib/: main.dcs
next/docs/design/draft/: README.md  comments.md  expressions.md  function.md  internal.md  module.md  program.md  record.md  statements.md  types.md
next/docs/design/draft/alternative/: array.md  dict.md  enum.md  record-old.md  record.md  tuple.md
next/scripts/: travis.sh
runtime/: CMakeLists.txt
runtime/src/: runtime.hpp
runtime/src/dachs/: runtime.cpp  runtime.hpp
samples/: array.dcs  brainfxxk.dcs  compose.dcs  fib.dcs  fib2.dcs  fizzbuzz.dcs  fizzbuzz2.dcs  fizzbuzz3.dcs  fizzbuzz4.dcs  helloworld.dcs  list_operation.dcs  mandelbrot.dcs  mandelbrot2.dcs  map.dcs  memoized_fib.dcs  random.dcs  range.dcs  rust-example.dcs  spec.dcs  sqrt.dcs  sqrt2.dcs  tap.dcs  variable.dcs  y.dcs
src/: CMakeLists.txt  ast.cpp  ast.hpp  comment_skipper.hpp  compiler.cpp  compiler.hpp  dachs.cpp  dachs.hpp  main.cpp  parser.cpp  parser.hpp
src/dachs/: CMakeLists.txt  ast.cpp  ast.hpp  ast_fwd.hpp  ast_walker.hpp  comment_skipper.hpp  compiler.cpp  compiler.hpp  exception.hpp  fatal.hpp  parser.cpp  parser.hpp  scope.cpp  scope.hpp  scope_fwd.hpp  semantics_check.cpp  semantics_check.hpp  symbol.hpp  type.cpp  type.hpp  warning.hpp
src/dachs/ast/: ast.cpp  ast.hpp  ast_copier.cpp  ast_copier.hpp  ast_fwd.hpp  ast_walker.hpp  stringize_ast.cpp  stringize_ast.hpp
src/dachs/codegen/: opt_level.hpp
src/dachs/codegen/llvmir/: allocation_emitter.hpp  builtin_func_ir_emitter.hpp  code_generator.cpp  code_generator.hpp  context.hpp  executable_generator.cpp  executable_generator.hpp  gc_alloc_emitter.hpp  ir_builder_helper.hpp  ir_emitter.cpp  ir_emitter.hpp  ir_generator.cpp  ir_utility.hpp  tmp_builtin_operator_ir_emitter.hpp  tmp_constructor_ir_emitter.hpp  tmp_member_ir_emitter.hpp  type_ir_emitter.cpp  type_ir_emitter.hpp  type_ir_generator.cpp  type_ir_generator.hpp  variable_table.hpp
src/dachs/helper/: ast_walker_base.hpp  backtrace_printer.hpp  colorizer.hpp  each.hpp  llvm.hpp  make.hpp  make_overload.hpp  probable.hpp  stringize_ast.cpp  stringize_ast.hpp  stringize_scope_tree.cpp  stringize_scope_tree.hpp  util.hpp  variant.hpp
src/dachs/parser/: comment_skipper.hpp  implicit_import.hpp  importer.cpp  importer.hpp  parser.cpp  parser.hpp
src/dachs/runtime/: io.cpp  runtime.cpp
src/dachs/semantics/: analyzer.cpp  analyzer.hpp  analyzer_common.hpp  const_func_checker.hpp  copy_resolver.hpp  error.hpp  forward_analyzer.cpp  forward_analyzer.hpp  forward_analyzer_impl.hpp  forward_function_analyzer.cpp  forward_function_analyzer.hpp  lambda_capture_resolver.hpp  scope.cpp  scope.hpp  scope_fwd.hpp  semantic_analysis.cpp  semantic_analysis.hpp  semantics_context.hpp  stringize_scope_tree.cpp  stringize_scope_tree.hpp  symbol.hpp  tmp_constructor_checker.hpp  tmp_member_checker.hpp  type.cpp  type.hpp  type_from_ast.hpp
src/helper/: colorizer.hpp  stringize_ast.cpp  stringize_ast.hpp  variant.hpp
test/: CMakeLists.txt  analyzer_test.cpp  codegen_llvm_test.cpp  helper_test.cpp  output_error.sh  parser_test.cpp  runtime_test.cpp  test_helper.hpp
test/assets/comprehensive/: test1.dcs  test10.dcs  test11.dcs  test12.dcs  test2.dcs  test3.dcs  test4.dcs  test6.dcs  test7.dcs  test8.dcs  test9.dcs
test/assets/function/: functions.dcs
test/assets/function/throw/: broken_end.dcs  no_name.dcs
test/assets/import_test/: error1.dcs  error2.dcs  error2_imported.dcs  foo.dcs  main.dcs  main2.dcs  self_import.dcs
test/assets/import_test/dummy/: relative_path_test.dcs
test/assets/import_test/foo/: aaa.dcs  bbb.dcs
test/assets/procedure/: minimal.dcs  procedures.dcs
test/assets/procedure/throw/: invalid_definition.dcs  return_type.dcs
test/codegen/: class_test.cpp  codegen_test_helper.hpp  expressions_test.cpp  lambda_test.cpp  samples_test.cpp  statements_test.cpp
test/parser/: importer_test.cpp  parser_test.cpp  samples_test.cpp
(+8 files in other folders)
